2002-06-04  Keisuke Nishida  <knishida@netlab.jp>

	* Makefile.am (cobpp_CFLAGS): -I$(top_srcdir), not -I$(top_srcdir)/lib.
	* cobpp.c, scanner.l: Updated.

2002-06-03  Keisuke Nishida  <knishida@netlab.jp>

	* Makefile.am (cobpp_LDADD): Add libsupport.a here.
	(cobpp_LIBS): Removed.
